hcin-sheild/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shieldu
  name: shieldu
spec:
  ports:
    -
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: shieldu
