hcin-sheild/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: shieldu
spec:
  rules:
  - host: shieldu-hcin.in.nonprod
    http:
      paths:
      - backend:
          serviceName: shieldu
          servicePort: 80
